# G4_ISOL_RELEASE

./: CMakeLists.txt  GNUmakefile  README.md  eff10_mod.cc  runme.sh
include/: DetectorConstruction.hh  DetectorConstructionMessenger.hh  DiffusionProcess.hh  EffusionMaterialData.hh  EffusionOptrChangeCrossSection.hh  EffusionOptrMultiParticleChangeCrossSection.hh  EffusionPhysicsList.hh  EffusionProcess.hh  EffusionTrackData.hh  EventAction.hh  G4LogicalExtendedVolume.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SensitiveDetectorHit.hh  StackingAction.hh  TargetSensitiveDetector.hh  TargetSensitiveDetectorHit.hh  UserActionInitialization.hh
mac/: generated_primaries.mac  pos1.mac  pos2.mac  pos3.mac  pos4.mac  pos5.mac  pos6.mac  pos7.mac  pos7b.mac  sim_036_080_02.mac  sim_036_080_03.mac  sim_036_081_05.mac  sim_036_082_01.mac  sim_036_082_02.mac  sim_036_082_03.mac  sim_036_082_04.mac  sim_036_082_05.mac  sim_036_082_06.mac  sim_036_083_00.mac  sim_036_083_01.mac  sim_036_083_02.mac  sim_036_083_03.mac  sim_036_083_04.mac  sim_036_083_05.mac  sim_036_083_06.mac  sim_036_084_01.mac  sim_036_084_02.mac  sim_036_084_03.mac  sim_036_084_04.mac  sim_036_084_05.mac  sim_036_084_06.mac  sim_036_085_00.mac  sim_036_085_01.mac  sim_036_085_02.mac  sim_036_085_03.mac  sim_036_085_04.mac  sim_036_085_05.mac  sim_036_085_06.mac  sim_036_086_00.mac  sim_036_086_01.mac  (+66 more)
src/: DetectorConstruction.cc  DetectorConstructionMessenger.cc  DiffusionProcess.cc  EffusionMaterialData.cc  EffusionOptrChangeCrossSection.cc  EffusionOptrMultiParticleChangeCrossSection.cc  EffusionPhysicsList.cc  EffusionProcess.cc  EffusionTrackData.cc  EventAction.cc  G4LogicalExtendedVolume.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SensitiveDetector.cc  SensitiveDetectorHit.cc  StackingAction.cc  TargetSensitiveDetector.cc  TargetSensitiveDetectorHit.cc  UserActionInitialization.cc
